Fixed Logo alignment on register and login page

--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -20,8 +20,8 @@ ion-content.mypages{
     /* margin-left:10px;
     margin-bottom:10px;
     margin-top:1%  */
-    margin-top:20%;
-    margin-bottom:20%
+    margin-top:25%;
+    margin-bottom:20%;
 }
 ion-input.email{
     color: #FE8235;
